# segment-anything

./: .gitignore  README.md  README_Package.md  pyproject.toml  repo_tree.dot  segment.py  setup.py
cattle/: README.dataset.txt  README.roboflow.txt  data.yaml
cattle/test/labels/: 451imgFlip_png.rf.25c5ac1a209dd5f9b5a3ac2b94a1c15e.txt
cattle/train/: labels.cache
cattle/train/labels/: 201flipTil_png.rf.a35869e17280fbec6179b1d4a8aa8cb0.txt  201imgTilNeg_png.rf.7473e36220a105880690f78b23dd5a0d.txt  201imgTil_png.rf.7463ccc801bba893b237de587bd33ae3.txt  20220118_095826_aug2_jpg.rf.a3f025a4502ae5bd43150686031a46c0.txt  20220118_095828_jpg.rf.71547c1c8e6b1307d3ecc38a13e85fe8.txt  20220118_095830_jpg.rf.80a1f8a5fabedda6bf9fbc4c1aeac7a5.txt  202flipTilNeg_png.rf.e20577c3d4704de57fab2884e8cebbd5.txt  202flipTil_png.rf.e0469df54784af2ef45814b5bebb97ef.txt  202img270_png.rf.55540f336b18be2e1749fa48477554eb.txt  202img90_png.rf.e3823624efa088e8d71c3ab0a90a6fea.txt  202imgFlip_png.rf.78caa246bf1eda8384c0ced0b65c4d66.txt  202imgTilNeg_png.rf.097e24d90fdda235a633f4f8a902edc8.txt  203flipTilNeg_png.rf.bfcbd7c0b4e1f4218a974ee09de0e1d1.txt  203flipTil_png.rf.0fde611d998564517369d44885592885.txt  203img270_png.rf.08a784d6ae54aacbaef09a60f6747576.txt  203imgFlip_png.rf.c681ace34d53660b43bc46027895de7d.txt  203imgTilNeg_png.rf.147a7b3200a1c2ef1108959feb8b089c.txt  (+97 more)
cattle/valid/: labels.cache
segment_anything/: __init__.py  cli.py
segment_anything.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
segment_anything/utils/: __init__.py  muzzle_crop.py
(+29 files in other folders)
